--- a/model_params.yaml
+++ b/model_params.yaml
@@ -7,17 +7,16 @@ random_search:
     verbose: 2
     
 model_selection:
-  module_0:
-    class: LogisticRegression
-    module: sklearn.linear_model
-    params:
-      fit_intercept: true
-      penalty: l2  
-      max_iter: 50
-      search_param_random:
-        fit_intercept:
-          - true  
-          - false  
-        penalty:
-          - l1
-          - l2
+  model_0:
+    module: sklearn.ensemble
+    class: RandomForestClassifier
+    params: 
+      n_estimators: 10
+      criterion: gini
+      
+    search_param_grid:
+      criterion:
+          - gini  
+          - entropy
+          
+ 
